src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__program_has_super_class.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error: A program cannot use `EXTEND`
  ┌─ <internal>:5:17
  │
5 │         PROGRAM prog EXTENDS cls
  │                 ^^^^ A program cannot use `EXTEND`


